--- a/sdk.properties
+++ b/sdk.properties
@@ -3,10 +3,10 @@
 system=LIVE
 moduleName=CognitiveServices
 update=overwrite
-toVersion=2.5.2-146
+toVersion=3.0.0-166
 eclipse=true
-customerEmail=hololens3@apiomat.com
+customerEmail=marsh@apiomat.com
 merge=true
 fromVersion=0.0.0
 password=
-host=https\://poc.apiomat.enterprises
+host=http\://nils-1043319527.eu-central-1.elb.amazonaws.com
