[AOM] Change MetaModel

--- a/sdk.properties
+++ b/sdk.properties
@@ -9,4 +9,4 @@ customerEmail=marsh@apiomat.com
 merge=true
 fromVersion=0.0.0
 password=
-host=http\://nils-1043319527.eu-central-1.elb.amazonaws.com
+host=https\://studio.apiomat.enterprises
