[AOM] Change MetaModel

--- a/.classpath
+++ b/.classpath
@@ -1,45 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="test">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/anttask-1.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/apache-httpclient/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="lib/apache-httpclient/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/apache-httpclient/fluenthc/fluent-hc-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/apache-httpclient/httpclient-4.3.5.jar"/>
-	<classpathentry kind="lib" path="lib/apache-httpclient/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/apache-httpclient/httpmime-4.2.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/fluent-hc-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.3.5.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.2.3.jar"/>
-	<classpathentry kind="lib" path="lib/jersey-core-1.19.jar"/>
-	<classpathentry kind="lib" path="lib/jsr311-api-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/nativemodule-base.jar"/>
-	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-annotations-1.5.12.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+<classpathentry kind="src" output="target/classes" path="src"><attributes><attribute name="optional" value="true"/><attribute name="maven.pomderived" value="true"/></attributes></classpathentry>
+<classpathentry kind="src" output="target/test-classes" path="test"><attributes><attribute name="optional" value="true"/><attribute name="maven.pomderived" value="true"/></attributes></classpathentry>
+<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"><attributes><attribute name="maven.pomderived" value="true"/></attributes></classpathentry>
+<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"><attributes><attribute name="maven.pomderived" value="true"/></attributes></classpathentry>
+<classpathentry kind="lib" path="lib/anttask-1.0.0.jar"/><classpathentry kind="lib" path="lib/apache-httpclient/commons-codec-1.6.jar"/><classpathentry kind="lib" path="lib/apache-httpclient/commons-logging-1.1.1.jar"/><classpathentry kind="lib" path="lib/apache-httpclient/fluenthc/fluent-hc-4.3.2.jar"/><classpathentry kind="lib" path="lib/apache-httpclient/httpclient-4.3.5.jar"/><classpathentry kind="lib" path="lib/apache-httpclient/httpcore-4.3.2.jar"/><classpathentry kind="lib" path="lib/apache-httpclient/httpmime-4.2.3.jar"/><classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/><classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/><classpathentry kind="lib" path="lib/fluent-hc-4.3.2.jar"/><classpathentry kind="lib" path="lib/httpclient-4.3.5.jar"/><classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/><classpathentry kind="lib" path="lib/httpmime-4.2.3.jar"/><classpathentry kind="lib" path="lib/jersey-core-1.19.jar"/><classpathentry kind="lib" path="lib/jsr311-api-1.1.1.jar"/><classpathentry kind="lib" path="lib/nativemodule-base.jar"/><classpathentry kind="lib" path="lib/servlet-api-2.5.jar"/><classpathentry kind="lib" path="lib/swagger-annotations-1.5.12.jar"/><classpathentry kind="output" path="target/classes"/>
 </classpath>
